--- a/templates/proxmox.yml.j2
+++ b/templates/proxmox.yml.j2
@@ -4,6 +4,7 @@
 {% set file_list = service_files | default([]) %}
 {% set svc_list = service_services | default([]) %}
 {% set cmd_list = service_commands | default([]) %}
+{% set container_features = container.features | default('') %}
 container_ip: "{{ service_ip }}"
 container:
   vmid: "{{ container.vmid | default(service_id) }}"
@@ -17,12 +18,16 @@ container:
     net0: "name={{ container.interface | default('eth0') }},bridge={{ container.bridge | default('vmbr0') }},ip={{ service_ip }}/{{ container.cidr | default(24) }}{% if container.gateway is defined %},gw={{ container.gateway }}{% elif service_gateway is defined %},gw={{ service_gateway }}{% endif %}"
   onboot: {{ container.onboot | default('yes') }}
   unprivileged: {{ container.unprivileged | default('yes') }}
-  features: "{{ container.features | default('nesting=1,keyctl=1') }}"
+{% if container_features | string | length > 0 %}
+  features: "{{ container_features }}"
+{% endif %}
 
 setup:
   packages:{% if pkg_list | length == 0 %} []{% else %}
 {% for pkg in pkg_list %}
-    - {{ pkg }}
+    - name: {{ (pkg.name if pkg is mapping else pkg) }}{% if pkg is mapping and pkg.version is defined %}
+      version: {{ pkg.version }}{% endif %}{% if pkg is mapping and pkg.state is defined %}
+      state: {{ pkg.state }}{% endif %}
 {% endfor %}{% endif %}
   config:{% if file_list | length == 0 %} []{% else %}
 {% for item in file_list %}
