--- a/templates/kubernetes.yml.j2
+++ b/templates/kubernetes.yml.j2
@@ -46,7 +46,7 @@
 {% set memory_request = resources.memory_mb | default(256) %}
 {% set cpu_cores = resources.cpu_cores | default(1) %}
 {% set connections_per_second = resources.connections_per_second if resources.connections_per_second is defined else None %}
-{% set volume_config = service_volume | default(service_volumes[0] if service_volumes is defined and service_volumes | length > 0 else None) %}
+{% set volume_config = service_volumes[0] if service_volumes is defined and service_volumes | length > 0 else None %}
 {% set use_host_path = volume_config is mapping and volume_config.host_path is defined %}
 {% set host_path = volume_config.host_path if use_host_path else None %}
 {% set host_path_type = volume_config.host_path_type | default('DirectoryOrCreate') if use_host_path else 'DirectoryOrCreate' %}
